# android-worldgen

./: .gitattributes  .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/uk/co/yeyaswizaw/worldgen/: MainActivity.kt  Native.kt  SurfaceRenderer.kt  Util.kt  WorldRenderer.kt
app/src/main/res/layout/: main_layout.xml
app/src/main/res/values/: strings.xml
native/: CMakeLists.txt
native/cmake/: android.toolchain.cmake
native/src/: main.cpp  main.hpp  native.cpp  native.hpp
